# claude-code-router-switcher

./: Makefile  README.md  pyproject.toml
claude-code-router-switcher/: __main__.py  cli.py  config_manager.py
claude_code_router_switcher/: __main__.py  cli.py  config_manager.py
tests/: test_cli.py  test_config_manager.py
